--- a/src/app/concursos/concurso-detail/image-review/image-review.page.html
+++ b/src/app/concursos/concurso-detail/image-review/image-review.page.html
@@ -1,4 +1,4 @@
-<div [ngClass]="responsiveService.isDesktkop ? 'ion-page': ''">
+<div [ngClass]="responsiveService.isDesktop ? 'ion-page': ''">
   <ion-header>
     <ion-toolbar>
       <ion-row class="ion-align-items-center ion-margin-end ion-margin-start">
