--- a/src/app/concursos/concurso-detail/inscribir-concursante/inscribir-concursante.component.html
+++ b/src/app/concursos/concurso-detail/inscribir-concursante/inscribir-concursante.component.html
@@ -28,12 +28,26 @@
                 <ion-item class="w-100 ion-margin-bottom">
                   <!-- [position]="(profile_id != undefined) ? 'stacked' : 'floating'" -->
                   <ion-label position="floating">Concursante</ion-label>
-                  <ion-select [(ngModel)]="profile_id" ngDefaultControl>
+                  <ion-select [(ngModel)]="profileContest.profile_id" ngDefaultControl>
                     <!-- [(value)]="image.profile_id" -->
                     <ion-select-option
                       *ngFor="let p of concursantes"
                       [value]="p.id"
                       >{{ p.name + " " + p.last_name }}</ion-select-option
+                    >
+                  </ion-select>
+                </ion-item>
+              </ion-row>
+              <ion-row class="ion-padding-top">
+                <ion-item class="w-100 ion-margin-bottom">
+                  <!-- [position]="(profile_id != undefined) ? 'stacked' : 'floating'" -->
+                  <ion-label position="floating">Categoría</ion-label>
+                  <ion-select [(ngModel)]="profileContest.category_id" ngDefaultControl>
+                    <!-- [(value)]="image.profile_id" -->
+                    <ion-select-option
+                      *ngFor="let c of categorias"
+                      [value]="c.id"
+                      >{{ c.name }}</ion-select-option
                     >
                   </ion-select>
                 </ion-item>
@@ -50,8 +64,8 @@
                     >
                       <app-btn-post
                         [posting]="posting"
-                        [disabled]="!datosCargados()"
                         (click)="inscribirConcursante()"
+                        [disabled]="!datosCargados()"
                       ></app-btn-post>
                       <!-- <ion-button
                         expand="block"
