--- a/src/app/concursos/secciones-abm/secciones-abm.page.html
+++ b/src/app/concursos/secciones-abm/secciones-abm.page.html
@@ -101,7 +101,7 @@
                       <ion-col class="ion-align-self-start">
                         <ion-item-group *ngFor="let s of getParentSections()">
                           <ion-item-divider lines="full" mode="ios">
-                            <ion-label> <b>{{ s.name }}</b></ion-label>
+                            <h4 class="ion-margin-top ion-margin-bottom"> <b>{{ s.name }}</b></h4>
                             <ion-col
                               slot="end"
                               size="1"
@@ -147,7 +147,7 @@
                             </ion-item>
                           </ng-template>
                           <!-- TODO: refactorizar el ngIf -->
-                          <div
+                          <div class="ion-padding-top" style="--ion-padding: 11px"
                             *ngIf="getSubSections(s.id).length > 0; else textoSeccion"
                           >
                             <ion-item
@@ -156,8 +156,8 @@
                               <ion-row class="w-100 ion-align-items-center">
                                 <!-- TODO: debería ser una tabla NxN para poder tene dos tablas por separado de carga!!!!  -->
                                 <!-- para achicar el tamaño del sector de la subseccion modificar el  size-md de la sig columna -->
-                                <!-- <ion-col size-md="5"> -->
-                                  <ion-col>
+                                <ion-col size-md="11.57">
+                                  <!-- <ion-col> -->
                                   <ion-row>
                                     <ion-col size="10">
                                       <ion-text>{{s1.name}} </ion-text>
