--- a/src/app/concursos/concurso-detail/concurso-detail.page.html
+++ b/src/app/concursos/concurso-detail/concurso-detail.page.html
@@ -82,6 +82,7 @@
         <ion-tab-button tab="fotografias">
           <ion-icon name="images-outline"></ion-icon>
           <ion-label>Fotografias</ion-label>
+          <ion-badge>{{resultadosConcurso.length }}</ion-badge>
         </ion-tab-button>
       </ion-tab-bar>
     </ion-tabs>
